--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?jlyatfh#1" target="_blank">首页</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/1?oqpuh" target="_blank">动态网</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/2?ptxdqbwl" target="_blank">大纪元</a> | <a href="https://d1lulvfep8g527.cloudfront.net/4?obeffpuke" target="_blank">看中国</a> | <a href="https://d265ujbtchne9r.cloudfront.net/pHh5q?tjwxgbsl" target="_blank">新生网</a> | <a href="https://d8jw662akk94j.cloudfront.net/tktpt?cqbakdt" target="_blank">阿波罗网</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/Mjpvu?ttflnli" target="_blank">干净世界</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/10?fmejlteg" target="_blank">退党服务</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/Rffqf?dkzqdv" target="_blank">明慧广播</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/nw9Vn?qibbnfppi" target="_blank">传奇时代</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/AF9AG?dluvevf" target="_blank">新境界影视</a> | <a href="https://d14a0yccee2yym.cloudfront.net/zqMQA?ophav" target="_blank">文昭谈论</a> | <a href="https://d1jex6syje0yji.cloudfront.net/7?laian" target="_blank">明慧</a></p><p><a href="https://d1dy14m1lbgtrj.cloudfront.net/9?yiwcagn" target="_blank">大法</a> | <a href="https://d3gus727acem18.cloudfront.net/3?smbevzkvs" target="_blank">新唐人</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/obAhT?zohumrlpd" target="_blank">人民报</a> | <a href="https://d2zw89wk00y815.cloudfront.net/xXNHu?lobfgdb" target="_blank">放光明</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/5?qelibuw" target="_blank">新纪元</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/6?ykxbg" target="_blank">希望之声</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/11?xvufzi" target="_blank">无界网络</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/Pueji?jdvwklom" target="_blank">追查国际</a> | <a href="https://dycg1eql8aigr.cloudfront.net/16?fasjqdibw" target="_blank">明慧之窗</a> | <a href="https://di88ceki78g29.cloudfront.net/LdvzZ?qktplda" target="_blank">细语人生</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/fBn3r?qhdqwdlnh" target="_blank">新世纪影视</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/PUWMb?vapiysyoy" target="_blank">江峰时刻</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/8?arfeqm" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?yayyqhal#1" target="_blank">首页</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/1?sevsqk" target="_blank">动态网</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/2?zbygk" target="_blank">大纪元</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/4?accuq" target="_blank">看中国</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/pHh5q?mlmbzfuv" target="_blank">新生网</a> | <a href="https://dwzgr3popmlhv.cloudfront.net/tktpt?wlejlc" target="_blank">阿波罗网</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/Mjpvu?trrrfocqd" target="_blank">干净世界</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/10?ldpaakgu" target="_blank">退党服务</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/Rffqf?mbvcvqm" target="_blank">明慧广播</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/nw9Vn?pizwvx" target="_blank">传奇时代</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/AF9AG?tiebkibo" target="_blank">新境界影视</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/zqMQA?mrpwk" target="_blank">文昭谈论</a> | <a href="https://d3siwajeg0khti.cloudfront.net/7?zsusuqgov" target="_blank">明慧</a></p><p><a href="https://d1b0mjr6ppvor4.cloudfront.net/9?vddmhvq" target="_blank">大法</a> | <a href="https://d21y52w6f35pla.cloudfront.net/3?nnzei" target="_blank">新唐人</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/obAhT?rvxcoi" target="_blank">人民报</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/xXNHu?ebavfstia" target="_blank">放光明</a> | <a href="https://dfxrfb9070id6.cloudfront.net/5?vvvsvlecb" target="_blank">新纪元</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/6?njipokgvt" target="_blank">希望之声</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/11?skdwlplnm" target="_blank">无界网络</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/Pueji?qrzzro" target="_blank">追查国际</a> | <a href="https://duxu97yt14q37.cloudfront.net/16?wpppjhtjy" target="_blank">明慧之窗</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/LdvzZ?hahwzhap" target="_blank">细语人生</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/fBn3r?tgbtgakvc" target="_blank">新世纪影视</a> | <a href="https://dlp02mn13eakq.cloudfront.net/PUWMb?gmynrir" target="_blank">江峰时刻</a> | <a href="https://d2p23c289x62lr.cloudfront.net/8?mdjdjdgzs" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137823.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137841-Moral-Leaders-1-320x200.jpg"><p align="center">人民希望国家领导人更关注道德领导力</p></a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137823.md#1" title="人民希望国家领导人更关注道德领导力""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137841-Moral-Leaders-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138126.md#1" title="寒流席卷中国 30个气象站突破历史极值""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137707-GettyImages-1844201692-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137445.md#1" title="神韵29日莅临湾区 未演先热 两城加场""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137447-2301050023322639-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137874.md#1" title="前三星员工涉泄密给长鑫存储 韩发逮捕令""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14096686-32-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://19920513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138145.md#1">川大法学院教授呼吁叫停裁判文书转内网</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138274.md#1">德勤：2023年A股融资额同比下滑40%</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138275.md#1">日韩：朝鲜深夜发射短程弹道导弹</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138145.md#1">川大法学院教授呼吁叫停裁判文书转内网</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138274.md#1">德勤：2023年A股融资额同比下滑40%</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138275.md#1">日韩：朝鲜深夜发射短程弹道导弹</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138125.md#1">中国高分子材料领域专家周光远去世 年仅51岁</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137733.md#1">组图：摄影师用镜头展现高贵典雅的骏马</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138212.md#1">新的停火谈判？以总理坚持对哈马斯施压</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137733.md#1">组图：摄影师用镜头展现高贵典雅的骏马</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138212.md#1">新的停火谈判？以总理坚持对哈马斯施压</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137649.md#1">周海媚去世前曾讲述一件诡异事</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137607.md#1">碧桂园陷入债务危机 杨惠妍开会“面如死灰”</a><br>
@@ -99,8 +99,8 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135697.md#1">【新闻大破解】美助台联防 中共藉热线欺诈美日</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135782.md#1">美国质疑华为先进芯片的性能和量产能力</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135598.md#1">疫情大爆发 中共催打国产疫苗引发质疑</a><br>
-<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3drp33hv00g8.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.226.101.113/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,434</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3e4dfg9jeh6ul.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://59.126.160.66/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,434</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
